[project]
name = "hatenablog-poster"
version = "0.1.0"
description = "authenticates hatena oauth and posts blog entry"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["requests-oauthlib", "python-dotenv"]



[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
